# ChangeLog for sys-apps/kmod
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/kmod/ChangeLog,v 1.80 2013/03/26 08:14:18 ssuominen Exp $

  26 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Declare this package as VIRTUAL_MODUTILS=1 for use with linux-mod.eclass wrt
  #462926

  22 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Sanitize upgrade path from sys-apps/module-init-tools by running
  update_depmod() function from linux-mod.eclass, but skipping it if we are
  upgrading or the /lib/modules directory with eg. modules.dep is missing.

  06 Mar 2013; Raúl Porcel <armin76@gentoo.org> kmod-12-r1.ebuild:
  m68k/s390/sh/sparc stable wrt #457568

  23 Feb 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild:
  Stable for alpha, wrt bug #457568

  15 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Warn users also about missing CONFIG_MODULE_UNLOAD (otherwise modprobe -r and
  lsmod won't behave as they should)

  09 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild:
  arm/ppc64 stable wrt #452556

  09 Feb 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild:
  Stable for ia64, wrt bug #452556

  08 Feb 2013; Jeroen Roovers <jer@gentoo.org> kmod-12-r1.ebuild:
  Stable for HPPA (bug #452556).

  05 Feb 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild:
  Ensure CONFIG_MODULES is set using linux-info.eclass by Agostino Sarubbo

  27 Jan 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild:
  Stable for ppc, wrt bug #452556

  20 Jan 2013; Agostino Sarubbo <ago@gentoo.org> kmod-12-r1.ebuild:
  Stable for x86, wrt bug #452556

  19 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild:
  amd64 stable wrt #452556

  18 Jan 2013; Samuli Suominen <ssuominen@gentoo.org> kmod-12-r1.ebuild,
  kmod-9999.ebuild: