@@ -1,1 +1,1 @@
-DIST kmod-12.tar.xz 1275028 SHA256 c6189dd8c5a1e8d9224e8506bd188c0cd5dfa119fd6b7e5869b3640cbe8bf92f SHA512 f24bb25812b1902736f875bd3d7f995fa42a50cb7208b0d79a82fb5915223cf78e41018d5bc2cd1088acad5dc8e3dd737876262f4acde6479936c4e04223b629 WHIRLPOOL cde992a543945670992813ce142aa96bd94cc719f539b4734a7c2251b2918622e60a027531d5b430c872e58f28a153d3d2b4b90babe3e4b0f3c262afb09b7116
+DIST kmod-13.tar.xz 1435864 SHA256 6c36d3abba2f98c84973ae275951c866f8bf304e7356c2fe60633800239d7956 SHA512 6182a043c32944c2dc336101e4d8a9be9ccd0106677f9f7a2e76b83a09ec2fc1333aed9b82773abe09f8adb1771e796690f1610c64b337e21bdabffe76fed434 WHIRLPOOL 95196f4c65fec778727a9b8d0209dcb08e64280b4b5d6e88b5343acb3a360b62c13a0dcf510d3c2080fad4ef1562c5e9fa11f84979d0acee03dab3fac8b3eaac
