@@ -14,6 +14,7 @@
 		<flag name="gudev">enable libudev gobject interface</flag>
 		<flag name='http'>Enable embedded HTTP server in journald</flag>
 		<flag name='kmod'>Enable kernel module loading via <pkg>sys-apps/kmod</pkg></flag>
+		<flag name='openrc'>Depend on <pkg>sys-fs/udev-init-scripts</pkg></flag>
 		<flag name='qrcode'>Enable qrcode output support in journal</flag>
 		<flag name='vanilla'>Disable Gentoo-specific behavior and compatibility quirks</flag>
 	</use>
